--- a/style.css
+++ b/style.css
@@ -1,18 +1,28 @@
 .cabeçalho{
     background-color: blueviolet;
     color: black;
-}text-align: center;
-padding: 15px;
-
-
+    text-align: center;
+    padding: 15px;
+    
+    }
+    .body{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: blueviolet;
+    
+    }
+    .img{
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    
 }
-
-.body{
-font-family: Arial, Helvetica, sans-serif;
-margin: 0;
-padding: 0;
-}
-.img{
-max-width: 100%;
-height: auto;
+sonhos{
+    background-color: blueviolet;
+   color: black;
+   padding: 20px;
+   margin: 20px;
+   text-align: center;
+   font-size: 18px;
 }
