--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@
     color: black;
     text-align: center;
     padding: 15px;
+    border-radius: 15px;
     
     }
-
-    .body{
+.body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     background-color: blueviolet;
+    border-radius: 10px;
     
     }
     .img{
@@ -26,4 +27,5 @@ sonhos{
    margin: 20px;
    text-align: center;
    font-size: 18px;
+   border-radius: 10px;
 }
