--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     
 }
 .sonhos{
-    background-color: blueviolet;
+    background-color: aquamarine;
    color: black;
    padding: 20px;
    margin: 20px;
