--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     
 }
 .sonhos{
-    background-color: aquamarine;
+    background-color: rgb(233, 10, 185);
    color: black;
    padding: 20px;
    margin: 20px;
